# eldtrip-backend

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
trips/: hos_calculator.py  models.py  ors_client.py  serializers.py  urls.py  views.py
trips/data/: locations_us.json
trips/migrations/: 0001_initial.py
trips/tests/: test_hos_calculator.py  test_location_search.py  test_ors_client.py  test_trip_plan_errors.py
